change background color

--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
 }
 
 body {
-    background: skyblue;
+    background: rgb(56, 83, 94);
 }
 img{
-    width: 400px
+    width: 420px
 }
 
 #header {
